gitops/redlib-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redlib
  namespace: apps
  labels:
    app: redlib

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redlib

  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: redlib
      containers:
        - name: redlib
          image: quay.io/redlib/redlib:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
