gitops/redlib-1/degoog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redlib
  namespace: apps
  labels:
    app: redlib

spec:
  type: ClusterIP

  selector:
    app: redlib

  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
